    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    --architecture-- refactoring in the useractions, see CVSNEWS

    FIXED: QLayout warnings in ListPanel (patch by Jiri Palecek)
    FIXED: memory leaks in KRpermHandler (patch by Jiri Palecek)
    FIXED: shutdown bugs (thanks to Jiri Palacek)
    FIXED: const char * compiler warnings removed (patch by Jiri Palecek)
    FIXED: memory leaks in KrDetailedView (patch by Jiri Palecek)
    FIXED: terminal emulator sends the CD commands too frequently
    FIXED: terminal emulator scrolls up its content after hide/show
    FIXED: [ 1501740 ] can not link from a search result's virtfs
    FIXED: rare compile problem where exit() isn't defined
    FIXED: [ 1519955 ] wrong permission handling in vfs::vfs_calcSpaceLocal
    FIXED: viewer gives back the focus to the search/locate widgets after ESC
    FIXED: problems with local directory names containing '@' character
    FIXED: security: sometimes the passwords are stored in cleartext in bookmarks.xml
    FIXED: cannot close Krusader when "menubar on top of the screen" is chosen
    FIXED: URL duplication is disabled in the virtual URL collection
    FIXED: cut/copy/paste also works for virtual URLs
    FIXED: [ 1483172 ] crash at refreshing the view during rename
    FIXED: [ 1144729 ] Krusader doesn't remember popup panel splitter position
    FIXED: [ 1479034 ] Crashes after clicking home button, when quicksearch is
           active (patch by Heiner Eichmann)
    FIXED: wrong character set is used on the radial map labels
    FIXED: TC style rename does not work with "Obey KDE's global selection policy"
    FIXED: [ 1189341 ] minimize to tray problems with GNOME